--- a/Assignment1_Client/appsettings.json
+++ b/Assignment1_Client/appsettings.json
@@ -8,5 +8,9 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "MyCnn": "server =localhost;database =MyStore;User ID=sa;Password=sa;TrustServerCertificate=True"
+  },
+  "Credentials": {
+    "Email": "dai",
+    "Password": "dai"
   }
 }
