[Product] Add search
add config admin to appsettings

--- a/Assignment1_Client/appsettings.json
+++ b/Assignment1_Client/appsettings.json
@@ -10,7 +10,7 @@
     "MyCnn": "server =localhost;database =MyStore;User ID=sa;Password=sa;TrustServerCertificate=True"
   },
   "Credentials": {
-    "Email": "dai",
-    "Password": "dai"
+    "Email": "admin@estore.com",
+    "Password": "admin@@"
   }
 }
